	'davit/affiliate_report.cpp', 'davit/affiliatesbymarket_report.cpp',
	'davit/maildialog.cpp', 'lib/dvtcmdswitch.cpp' and
	'lib/dvtcmdswitch.h'.
2013-03-11 Fred Gleason <fredg@paravelsystems.com>
	* Added 'kdmrc-example'.
	* Documented kdm(8) configuration in 'INSTALL'.
2014-01-02 Fred Gleason <fredg@paravelsystems.com>
	* Added 'CONTACT NAME' and 'CONTACT PHONE' to the Affidavit Contact
	report in 'davit/affidavit_report.cpp', 'davit/list_reports.cpp'
	and 'davit/list_reports.h'.
2014-05-13 Fred Gleason <fredg@paravelsystems.com>
	* Modified 'davit.spec.in' and 'Makefile.am' for CentOS.
2014-05-13 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 2.1.1.
2014-05-13 Fred Gleason <fredg@paravelsystems.com>
	* Changed installation location of 'dvt-bin.conf' from
	'/etc/apache2/conf.d/' to '/etc/httpd.conf.d/'.
2014-05-13 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 2.1.2.
2014-09-29 Fred Gleason <fredg@paravelsystems.com>
	* Moved 'configure.in' to 'configure.ac'.
	* Modernized AC_INIT() and AM_INIT() invocations in
	'configure.ac'.
2014-09-29 Fred Gleason <fredg@paravelsystems.com>
	* Modified the 'make rpm' target to use in-home RPM build
	directories.
2014-10-07 Fred Gleason <fredg@paravelsystems.com>
	* Updated 'davit/precisiontrak.cpp' to use the 'Davit-v3' template
	in PrecisionTrak.
2014-10-07 Fred Gleason <fredg@paravelsystems.com>
	* Refactored to eliminate the isctrl() call in
	'davit/precisiontrak.cpp' so as to allow compilation under
	Windows.
2014-10-07 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 2.1.3.
2014-11-17 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'Send Test E-Mail' button to the 'Edit System Settings'
	dialog in 'davit/edit_system.cpp' and 'davit/edit_system.h'.
	* Removed duplicate catch clause in 'lib/dvtmail.cpp'.
2014-11-17 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 2.1.4.