@@ -68,7 +68,7 @@ SOURCES += arbitron_report.cpp
 SOURCES += affiliatesbyprogram_report.cpp
 SOURCES += raaffiliate_report.cpp
 SOURCES += affidavit_report.cpp
-SOURCES += missingaffidavit_report.cpp
+SOURCES += missingaffidavitcontact_report.cpp
 SOURCES += list_contacts.cpp
 SOURCES += contactlistview.cpp
 SOURCES += edit_contact.cpp
