@@ -4,8 +4,6 @@
 //
 //   (C) Copyright 2010 Fred Gleason <fredg@paravelsystems.com>
 //
-//      $Id: missingaffidavit_report.cpp,v 1.8 2011/03/29 17:51:27 pcvs Exp $
-//
 //   This program is free software; you can redistribute it and/or modify
 //   it under the terms of the GNU General Public License version 2 as
 //   published by the Free Software Foundation.
@@ -33,7 +31,7 @@
 #include <list_reports.h>
 
 
-void ListReports::MissingAffidavitReport()
+void ListReports::MissingAffidavitContactReport()
 {
   QString s;
   QString sql;
